[gd_scene load_steps=21 format=2]

[ext_resource path="res://sprites/inimigos/all_boss/boss01/boss4.png" type="Texture" id=1]
[ext_resource path="res://scripts/all_boss/boss1/boss1.gd" type="Script" id=2]
[ext_resource path="res://sprites/inimigos/all_boss/boss01/boss2.png" type="Texture" id=3]
[ext_resource path="res://sprites/efeitos_jogo/smoke.png" type="Texture" id=4]
[ext_resource path="res://sprites/inimigos/all_boss/boss01/boss3.png" type="Texture" id=5]
[ext_resource path="res://sprites/inimigos/all_boss/boss01/boss1.png" type="Texture" id=6]
[ext_resource path="res://sprites/inimigos/all_boss/boss01/boss5.png" type="Texture" id=7]
[ext_resource path="res://fonts/BebasNeue-Regular.otf" type="DynamicFontData" id=8]
[ext_resource path="res://sprites/inimigos/all_boss/painel_energia_bosses.png" type="Texture" id=9]
[ext_resource path="res://sprites/player/painel_da_barra.png" type="Texture" id=10]
[ext_resource path="res://scenes/player/energia_laser.tscn" type="PackedScene" id=11]

[sub_resource type="Curve" id=1]
_data = [ Vector2( 0, 0.447727 ), 0.0, 2.33583, 0, 0, Vector2( 1, 1 ), -0.0670763, 0.0, 0, 0 ]

[sub_resource type="Animation" id=2]
resource_name = "dormindo"
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 6 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "encolher"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1.3, 1.3 ), Vector2( 0.9, 0.9 ), Vector2( 1.3, 1.3 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("sprite:texture")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 5 ), ExtResource( 7 ), ExtResource( 5 ) ]
}

[sub_resource type="Animation" id=4]
length = 0.9
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.7 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ ExtResource( 5 ), ExtResource( 1 ) ]
}

[sub_resource type="Animation" id=5]
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 7 ) ]
}

[sub_resource type="Animation" id=6]
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.6, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1.3, 1.3 ), Vector2( 3, 3 ), Vector2( 3, 3 ), Vector2( 1.3, 1.3 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("sprite:texture")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2, 0.8, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 5 ), ExtResource( 3 ), ExtResource( 3 ), ExtResource( 5 ) ]
}

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 71.2203, 15.5 )

[sub_resource type="DynamicFont" id=8]
size = 6
font_data = ExtResource( 8 )

[sub_resource type="Animation" id=9]
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -20, 0 ), Vector2( 10, 0 ) ]
}

[node name="boss1" type="KinematicBody2D"]
collision_layer = 2
collision_mask = 9
script = ExtResource( 2 )
__meta__ = {
"_edit_horizontal_guides_": [ -60.3878 ]
}

[node name="dir_ar" type="CPUParticles2D" parent="."]
position = Vector2( 28.9761, 31.3608 )
emitting = false
amount = 50
randomness = 1.0
texture = ExtResource( 4 )
emission_shape = 2
emission_rect_extents = Vector2( 3, 1 )
direction = Vector2( 3, 0 )
spread = 100.0
gravity = Vector2( 0, -98 )
initial_velocity = 30.0
initial_velocity_random = 0.12
angular_velocity = 12.0
scale_amount_curve = SubResource( 1 )

[node name="esq_ar" type="CPUParticles2D" parent="."]
position = Vector2( -25.7275, 32.55 )
emitting = false
amount = 50
randomness = 1.0
texture = ExtResource( 4 )
emission_shape = 2
emission_rect_extents = Vector2( 3, 1 )
direction = Vector2( -3, 0 )
spread = 100.0
gravity = Vector2( 0, -98 )
initial_velocity = 30.0
initial_velocity_random = 0.12
angular_velocity = 12.0
scale_amount_curve = SubResource( 1 )

[node name="sprite" type="Sprite" parent="."]
scale = Vector2( 1.3, 1.3 )
texture = ExtResource( 5 )

[node name="shape" type="CollisionPolygon2D" parent="."]
visible = false
position = Vector2( 1.06066, -0.353554 )
polygon = PoolVector2Array( -16.7885, 8.96985, -17.6724, 13.7428, -26.1577, 16.3945, -32.3448, 23.112, -31.2842, 33.1883, -28.279, 39.729, -23.3292, 40.7897, -17.9994, 40.6014, -13.6065, 37.6077, -13.4297, 28.5921, -2.64635, 37.0773, 1.24273, 36.1935, 6.59677, 37.448, 13.6171, 32.1276, 15.5616, 38.4916, 19.9811, 41.4968, 24.0469, 41.1432, 30.4109, 37.2541, 33.2393, 31.774, 33.4161, 25.4101, 28.6431, 18.1622, 17.8597, 16.3945, 19.274, 0.13101, 24.4005, -8.8846, 26.1683, -13.8343, 19.8409, -14.8978, 20.3346, -22.6732, 16.7991, -31.1585, 8.31381, -24.441, -0.525028, -34.3405, -8.53936, -23.7272, -13.4297, -30.8049, -18.0259, -23.9106, -20.7324, -16.3693, -24.3899, -14.1879, -25.097, -10.2988, -21.363, -6.27857, -18.0259, 1.19167 )

[node name="anim" type="AnimationPlayer" parent="."]
anims/dormindo = SubResource( 2 )
anims/encolher = SubResource( 3 )
anims/parado = SubResource( 4 )
anims/perseguindo = SubResource( 5 )
anims/tamanho = SubResource( 6 )

[node name="sensor_iniciar" type="Area2D" parent="."]
position = Vector2( -0.689209, -59.3143 )

[node name="shape" type="CollisionShape2D" parent="sensor_iniciar"]
shape = SubResource( 7 )

[node name="hud" type="CanvasLayer" parent="."]

[node name="itens" type="Node2D" parent="hud"]
position = Vector2( -20, 0 )

[node name="Sprite" type="Sprite" parent="hud/itens"]
position = Vector2( 8.50824, 147.86 )
rotation = -1.5708
scale = Vector2( 0.4, 0.379952 )
texture = ExtResource( 10 )

[node name="energia_boss" parent="hud/itens" instance=ExtResource( 11 )]
margin_left = 2.0
margin_top = 179.0
margin_right = 78.0
margin_bottom = 186.0
rect_rotation = -90.0
color = Color( 0.576471, 0.219608, 0.560784, 1 )

[node name="Sprite2" type="Sprite" parent="hud/itens"]
position = Vector2( 7.59305, 152.623 )
rotation = -1.5708
scale = Vector2( 0.4, 0.379953 )
texture = ExtResource( 9 )

[node name="Label" type="Label" parent="hud/itens"]
margin_left = 1.87733
margin_top = 202.527
margin_right = 32.8773
margin_bottom = 213.527
rect_rotation = -90.0
custom_fonts/font = SubResource( 8 )
text = "BOSS Energy"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="anim" type="AnimationPlayer" parent="hud/itens"]
anims/painel_energia = SubResource( 9 )

[node name="colidir_com_player" type="Area2D" parent="."]
position = Vector2( 1.49831, 0.749146 )

[node name="CollisionShape2D" type="CollisionPolygon2D" parent="colidir_com_player"]
visible = false
polygon = PoolVector2Array( -11.0494, 32.7282, -5.37338, 37.9838, 2.19469, 38.194, 12.0752, 33.1486, 12.2854, 39.8758, 25.3193, 41.5576, 34.9897, 29.9953, 34.7794, 19.484, 23.4273, 13.3876, 16.9104, 13.5978, 20.4842, -1.74859, 25.3193, -7.84509, 29.3136, -13.7314, 27.6318, -17.3052, 21.9558, -17.0949, 21.5353, -26.9755, 17.1206, -36.4356, 7.87074, -26.3448, -1.23344, -38.8816, -7.47562, -28.0266, -11.6801, -27.8164, -17.9868, -36.2253, -22.6118, -25.5039, -22.6118, -19.4074, -25.3447, -16.2541, -29.5491, -17.7256, -30.1798, -12.6802, -26.606, -7.84509, -23.8731, -5.3224, -22.1913, -0.487244, -20.7197, 8.76262, -18.197, 12.1262, -21.3504, 13.5978, -28.9185, 15.2796, -34.1741, 18.8534, -36.4865, 27.2623, -33.9639, 35.6713, -30.1798, 40.5065, -27.0265, 42.1882, -18.8277, 41.978, -13.5721, 40.2962 )

[node name="Timer" type="Timer" parent="."]
wait_time = 3.0
autostart = true

[node name="pos_espinho" type="Position2D" parent="."]
position = Vector2( 0.44545, 0.44545 )

[connection signal="body_entered" from="sensor_iniciar" to="." method="_on_sensor_iniciar_body_entered"]
[connection signal="body_entered" from="colidir_com_player" to="." method="_on_colidir_com_player_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
